zkay/examples/type_errors/Reclassification2.zkay
pragma zkay >=0.2.0;

contract Addition {

    address owner;

    uint@owner a1;
    uint a2;
    uint@all b;

	function f() public {
	    require(owner == me);
		b = a1 + a2;
	}
}
